test/org/midica/testfiles/failing/include-not-existing-file.midica
INCLUDE inc/not-existing-file.midica

0 c /4
0 d /4
*
1 c /4
